fix kylo logo on firefox

--- a/ui/ui-feed-manager/src/main/resources/static-feed-mgr/assets/app.css
+++ b/ui/ui-feed-manager/src/main/resources/static-feed-mgr/assets/app.css
@@ -6,7 +6,6 @@ html, body {
 }
 
 .kylo-logo {
-  height: 60%;
   width: 60%;
   margin-top: -7px;
   margin-bottom: -12px;
